--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -65,8 +65,8 @@ unfocused_hollow = true
 blinking = "Off"
 shape = "Block"
 
-[debug]
-log_level = "Debug"
+# [debug]
+# log_level = "Debug"
 
 
 [[hints.enabled]]
@@ -98,202 +98,6 @@ mods = "Command"
 
 [mouse]
 hide_when_typing = true
-
-# [schemes.everforest_brown.bright]
-# black = "0x859289"
-# blue = "0x3a94c5"
-# cyan = "0x35a77c"
-# green = "0x8da101"
-# magenta = "0xdf69ba"
-# red = "0xf85552"
-# white = "0xfdf6e3"
-# yellow = "0xdfa000"
-#
-# [schemes.everforest_brown.cursor]
-# cursor = "#68e3df"
-# text = "#000000"
-#
-# [schemes.everforest_brown.normal]
-# black = "0x262323"
-# blue = "0x7fbbb3"
-# cyan = "0x83c092"
-# green = "0xa7c080"
-# magenta = "0xd699b6"
-# red = "0xe67e80"
-# white = "0xeee8d5"
-# yellow = "0xdbbc7f"
-#
-# [schemes.everforest_brown.primary]
-# background = "#3a3535"
-# foreground = "#d7cab4"
-#
-# [schemes.everforest_dark_hard.bright]
-# black = "#475258"
-# blue = "#7fbbb3"
-# cyan = "#83c092"
-# green = "#a7c080"
-# magenta = "#d699b6"
-# red = "#e67e80"
-# white = "#d3c6aa"
-# yellow = "#dbbc7f"
-#
-# [schemes.everforest_dark_hard.cursor]
-# cursor = "#68e3df"
-# text = "#000000"
-#
-# [schemes.everforest_dark_hard.normal]
-# black = "#414b50"
-# blue = "#7fbbb3"
-# cyan = "#83c092"
-# green = "#a7c080"
-# magenta = "#d699b6"
-# red = "#e67e80"
-# white = "#d3c6aa"
-# yellow = "#dbbc7f"
-#
-# [schemes.everforest_dark_hard.primary]
-# background = "#272e33"
-# foreground = "#d3c6aa"
-#
-# [schemes.everforest_dark_medium.bright]
-# black = "#475258"
-# blue = "#7fbbb3"
-# cyan = "#83c092"
-# green = "#a7c080"
-# magenta = "#d699b6"
-# red = "#e67e80"
-# white = "#d3c6aa"
-# yellow = "#dbbc7f"
-#
-# [schemes.everforest_dark_medium.cursor]
-# cursor = "#68e3df"
-# text = "#000000"
-#
-# [schemes.everforest_dark_medium.normal]
-# black = "#475258"
-# blue = "#7fbbb3"
-# cyan = "#83c092"
-# green = "#a7c080"
-# magenta = "#d699b6"
-# red = "#e67e80"
-# white = "#d3c6aa"
-# yellow = "#dbbc7f"
-#
-# [schemes.everforest_dark_medium.primary]
-# background = "#2d353b"
-# foreground = "#d3c6aa"
-#
-# [schemes.everforest_dark_soft.bright]
-# black = "#4d5960"
-# blue = "#7fbbb3"
-# cyan = "#83c092"
-# green = "#a7c080"
-# magenta = "#d699b6"
-# red = "#e67e80"
-# white = "#d3c6aa"
-# yellow = "#dbbc7f"
-#
-# [schemes.everforest_dark_soft.cursor]
-# cursor = "#68e3df"
-# text = "#000000"
-#
-# [schemes.everforest_dark_soft.normal]
-# black = "#4d5960"
-# blue = "#7fbbb3"
-# cyan = "#83c092"
-# green = "#a7c080"
-# magenta = "#d699b6"
-# red = "#e67e80"
-# white = "#d3c6aa"
-# yellow = "#dbbc7f"
-#
-# [schemes.everforest_dark_soft.primary]
-# background = "#333c43"
-# foreground = "#d3c6aa"
-#
-# [schemes.everforest_light_hard.bright]
-# black = "#5c6a72"
-# blue = "#3a94c5"
-# cyan = "#35a77c"
-# green = "#8da101"
-# magenta = "#df69ba"
-# red = "#f85552"
-# white = "#e8e5d5"
-# yellow = "#dfa000"
-#
-# [schemes.everforest_light_hard.cursor]
-# cursor = "#68e3df"
-# text = "#000000"
-#
-# [schemes.everforest_light_hard.normal]
-# black = "#5c6a72"
-# blue = "#3a94c5"
-# cyan = "#35a77c"
-# green = "#8da101"
-# magenta = "#df69ba"
-# red = "#f85552"
-# white = "#e8e5d5"
-# yellow = "#dfa000"
-#
-# [schemes.everforest_light_hard.primary]
-# background = "#fffbef"
-# foreground = "#5c6a72"
-#
-# [schemes.everforest_light_medium.bright]
-# black = "#5c6a72"
-# blue = "#3a94c5"
-# cyan = "#35a77c"
-# green = "#8da101"
-# magenta = "#df69ba"
-# red = "#f85552"
-# white = "#e0dcc7"
-# yellow = "#dfa000"
-#
-# [schemes.everforest_light_medium.cursor]
-# cursor = "#68e3df"
-# text = "#000000"
-#
-# [schemes.everforest_light_medium.normal]
-# black = "#5c6a72"
-# blue = "#3a94c5"
-# cyan = "#35a77c"
-# green = "#8da101"
-# magenta = "#df69ba"
-# red = "#f85552"
-# white = "#e0dcc7"
-# yellow = "#dfa000"
-#
-# [schemes.everforest_light_medium.primary]
-# background = "#fdf6e3"
-# foreground = "#5c6a72"
-#
-# [schemes.everforest_light_soft.bright]
-# black = "#5c6a72"
-# blue = "#3a94c5"
-# cyan = "#35a77c"
-# green = "#8da101"
-# magenta = "#df69ba"
-# red = "#f85552"
-# white = "#d8d3ba"
-# yellow = "#dfa000"
-#
-# [schemes.everforest_light_soft.cursor]
-# cursor = "#68e3df"
-# text = "#000000"
-#
-# [schemes.everforest_light_soft.normal]
-# black = "#5c6a72"
-# blue = "#3a94c5"
-# cyan = "#35a77c"
-# green = "#8da101"
-# magenta = "#df69ba"
-# red = "#f85552"
-# white = "#d8d3ba"
-# yellow = "#dfa000"
-
-# [schemes.everforest_light_soft.primary]
-# background = "#f3ead3"
-# foreground = "#5c6a72"
 
 [window]
 decorations = "buttonless"
