--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,11 +1,15 @@
 # https://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
 # https://github.com/nicknisi/dotfiles/blob/main/tmux/tmux.conf.symlink
 
-bind-key > source-file ~/.tmux.conf \;
+bind-key > {
+	source-file ~/.tmux.conf
+	display-message "updated"
+}
+
 # display-message "~/.tmux.conf reloaded"
 bind-key , split-window -h "$EDITOR ~/.tmux.conf"
 
-set -g default-command "${SHELL}"
+set-option -g default-command "${SHELL}"
 
 # Server options
 set-option -gs default-terminal "screen-256color"
@@ -15,15 +19,15 @@ set-option -gas terminal-overrides "*:Tc"
 set-option -gas terminal-overrides "*:RGB"
 
 # Fix cursor shape
-set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
+set-option -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
 
 # Enable double/curly underline
 set-option -gas terminal-overrides '*:Smulx=\E[4::%p1%dm'
 set-option -gas terminal-overrides '*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 
 # VI mode
-set -g status-keys vi
-setw -g mode-keys vi
+set-option -g status-keys vi
+set-option -w -g mode-keys vi
 
 # Vim
 set-option -g focus-events on
@@ -32,100 +36,106 @@ set-option -g focus-events on
 set-window-option -g xterm-keys on
 set-option -gw xterm-keys on
 
-# set prefix2 C-n
+# set-option prefix2 C-n
 
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
-bind-key e run-shell "tmux capture-pane -p | nvim '+norm G' -R -"
+bind-key e {
+	capture-pane  -T -S - -b capture
+	# The \_s atom match any white space including new line. The \%$ atom match the end of the buffer.
+	# +'%s/\_s*\%$//e'
+	display-popup -E -x0% -y0% -w100% -h99% "tmux show-buffer -b capture | nvim -R +'norm G'"
+	delete-buffer -b capture
+}
 
-set -gs escape-time 10
-set -g mouse on
-set -g base-index 1
-set -g pane-base-index 1
-set -g history-limit 1000000
+set-option -gs escape-time 10
+set-option -g mouse on
+set-option -g base-index 1
+set-option -g pane-base-index 1
+set-option -g history-limit 1000000
 
 # Automatically renumber tmux windows
-set -g renumber-windows on
-set -g automatic-rename on
-set -g automatic-rename-format '#{b:pane_current_path}'
+set-option -g renumber-windows on
+set-option -g automatic-rename on
+set-option -g automatic-rename-format '#{b:pane_current_path}'
 
 # Loud or quiet?
-set -g visual-activity off
-set -g visual-bell off
-set -g visual-silence off
-setw -g monitor-activity off
-set -g bell-action none
+set-option -g visual-activity off
+set-option -g visual-bell off
+set-option -g visual-silence off
+set-option -w -g monitor-activity off
+set-option -g bell-action none
 
 # Open pane in same path
-bind c new-window -a -c "#{pane_current_path}"
-bind '%' split-window -h -c '#{pane_current_path}'
-bind '"' split-window -v -c '#{pane_current_path}'
-bind v split-window -h -c '#{pane_current_path}'
-bind s split-window -v -c '#{pane_current_path}'
-bind S split-window -v -c '#{pane_current_path}' \; resize-pane -y '30%'
-bind g choose-session
-bind G command-prompt -p "new session:" "new -s %1"
-bind r command-prompt -p "window name:" "rename-window %1"
-bind R command-prompt -p "session name:" "rename-session %1"
+bind-key c new-window -a -c "#{pane_current_path}"
+bind-key '%' split-window -h -c '#{pane_current_path}'
+bind-key '"' split-window -v -c '#{pane_current_path}'
+bind-key v split-window -h -c '#{pane_current_path}'
+bind-key s split-window -v -c '#{pane_current_path}'
+bind-key S split-window -v -c '#{pane_current_path}' \; resize-pane -y '30%'
+bind-key g choose-session
+bind-key G command-prompt -p "new session:" "new -s %1"
+bind-key r command-prompt -p "window name:" "rename-window %1"
+bind-key R command-prompt -p "session name:" "rename-session %1"
 unbind-key n
-set -g pane-border-lines heavy
-set -g pane-border-style fg=#665555
-set -g pane-active-border-style fg=#AA6666
+set-option -g pane-border-lines heavy
+set-option -g pane-border-style fg=#665555
+set-option -g pane-active-border-style fg=#AA6666
 
 # bind-key -n C-Tab next-window
 # bind-key -n C-S-Tab previous-window
 
-bind C-n next-window
-bind C-b last-window
-bind C-v previous-window
-bind N swap-window -t +1\; select-window -t +1
-bind V swap-window -t -1\; select-window -t -1
+bind-key C-n next-window
+bind-key C-b last-window
+bind-key C-v previous-window
+bind-key N swap-window -t +1\; select-window -t +1
+bind-key V swap-window -t -1\; select-window -t -1
 
-# bind { swap-window -t -1\; select-window -t -1
-# bind } swap-window -t +1\; select-window -t +1
+# bind-key { swap-window -t -1\; select-window -t -1
+# bind-key } swap-window -t +1\; select-window -t +1
 
 # bind-key -n M-l next-window
 # bind-key -n M-h previous-window
 
 # Pane movement shortcuts
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-# bind -n C-h select-pane -L
-# bind -n C-j select-pane -D
-# bind -n C-k select-pane -U
-# bind -n C-l select-pane -R
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+# bind-key -n C-h select-pane -L
+# bind-key -n C-j select-pane -D
+# bind-key -n C-k select-pane -U
+# bind-key -n C-l select-pane -R
 
-bind q kill-pane
+bind-key q kill-pane
 # close windows to the right
-# bind Q run-shell "tmux list-windows -F '#{window_index} #{window_id}' | awk '$1 > '$(tmux list-windows -f '#{==:#{window_active},1}' -F '#{window_index}')'{ system(\"tmux kill-window -t \" $2) }'"
+# bind-key Q run-shell "tmux list-windows -F '#{window_index} #{window_id}' | awk '$1 > '$(tmux list-windows -f '#{==:#{window_active},1}' -F '#{window_index}')'{ system(\"tmux kill-window -t \" $2) }'"
 
 # Resize pane shortcuts
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
+bind-key -r H resize-pane -L 5
+bind-key -r J resize-pane -D 5
+bind-key -r K resize-pane -U 5
+bind-key -r L resize-pane -R 5
 
 
 # Statusbar
-bind-key Z set status
+bind-key Z set-option status
 # Zoom
 bind-key o resize-pane -Z
 
-# set -g status-interval 1
-set -g allow-rename off
+# set-option -g status-interval 1
+set-option -g allow-rename off
 #  #(date)
-set -g status-position bottom
-set -g status-justify left
-set -g status-left ''
-set -g status-right '#[fg=colour8]▗#[fg=colour15,bg=colour8] %a %d.%m %b #[fg=colour8,bg=default]▘ #[fg=colour15,bg=default]%H:%M#[fg=default,bg=default]'
-set -g status-right-length 50
-set -g status-left-length 0
+set-option -g status-position bottom
+set-option -g status-justify left
+set-option -g status-left ''
+set-option -g status-right '#[fg=colour8]▗#[fg=colour15,bg=colour8] %a %d.%m %b #[fg=colour8,bg=default]▘ #[fg=colour15,bg=default]%H:%M#[fg=default,bg=default]'
+set-option -g status-right-length 50
+set-option -g status-left-length 0
 
-set -g status-style bg=default
-set -g status-style fg=darkgray
+set-option -g status-style bg=default
+set-option -g status-style fg=darkgray
 
 # Statusbar: current windows
 # setw -g window-status-current-style 'fg=colour237 bg=default bold'
@@ -141,12 +151,12 @@ set -g status-style fg=darkgray
 # ◗
 # ◤
 # ░▒▓█
-setw -g window-status-current-format '#[fg=colour8]▗#[fg=colour7,bg=colour8] #I #[fg=colour7]#W #[fg=colour8,bg=default]▘'
+set-option -w -g window-status-current-format '#[fg=colour8]▗#[fg=colour7,bg=colour8] #I #[fg=colour7]#W #[fg=colour8,bg=default]▘'
 
 # Statusbar: windows
 # setw -g window-status-style 'fg=colour0 bg=default'
 # setw -g window-status-format ' #[fg=colour8,bg=default] #I #[fg=colour8]#W#[fg=color8] #F #[fg=default,bg=default] '
-setw -g window-status-format ' #[fg=colour243,bg=default] #I #[fg=colour243]#W #[fg=default,bg=default] '
-setw -g window-status-separator ''
+set-option -w -g window-status-format ' #[fg=colour243,bg=default] #I #[fg=colour243]#W #[fg=default,bg=default] '
+set-option -w -g window-status-separator ''
 
-setw -g window-status-bell-style 'bold'
+set-option -w -g window-status-bell-style 'bold'
