--- a/aerospace/.config/aerospace/aerospace.toml
+++ b/aerospace/.config/aerospace/aerospace.toml
@@ -95,4 +95,9 @@ k = 'resize height -50'
 l = 'resize width +50'
 # enter = 'mode main'
 esc = 'mode main'
-#
+
+[[on-window-detected]]
+if.app-id = 'com.google.Chrome'
+if.window-title-regex-substring = 'Picture-in-picture'
+run = 'layout floating'
+# check-further-callbacks = true
