--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -15,6 +15,10 @@ x = 15
 y = 15
 
 [font]
+# size = 12.8
+# normal = { family = "Hermit" , style = "Light" }
+# bold = {style = "Bold"}
+
 # size = 13
 # normal = { family = "Reddit Mono" , style = "Light" }
 # bold = {style = "SemiBold"}
@@ -48,7 +52,7 @@ y = 15
 # normal = {style = "Light", family = "Geist Mono"}
 # bold = {style = "Medium"}
 
-size = 13
+size = 12.7
 normal = {family = "JetBrains Mono", style = "ExtraLight" }
 bold = {style = "Medium"}
 
