--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -15,6 +15,10 @@ x = 15
 y = 15
 
 [font]
+# size = 13
+# normal = { family = "CommitMonoLight" , style = "Regular" }
+# bold = {style = "Bold"}
+
 # size = 12.8
 # normal = { family = "Hermit" , style = "Light" }
 # bold = {style = "Bold"}
