--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -45,9 +45,9 @@ y = 15
 # normal = { family = "Google Sans Mono" , style = "Regular" }
 # bold = {style = "SemiBold"}
 
-# size = 12.5
-# normal = { family = "Iosevka Term" , style = "Light Extended" }
-# bold = {style = "SemiBold Extended"}
+size = 12.5
+normal = { family = "Iosevka Term" , style = "Light Extended" }
+bold = {style = "SemiBold Extended"}
 
 # size = 14.5
 # normal = { family = "Iosevka Term" , style = "Light" }
@@ -60,9 +60,9 @@ y = 15
 # normal = {style = "Light", family = "Geist Mono"}
 # bold = {style = "Medium"}
 
-size = 15
-normal = {family = "JetBrains Mono", style = "Light" }
-bold = {style = "Medium"}
+# size = 14.8
+# normal = {family = "JetBrains Mono", style = "Light" }
+# bold = {style = "Medium"}
 
 # size = 13.8
 # normal = {family = "Overpass Mono", style = "Light" }
@@ -88,7 +88,7 @@ bold = {style = "Medium"}
 # normal = {family = "Fira Code", style = "Regular" }
 # bold = {style = "SemiBold"}
 
-# size = 15
+# size = 17
 # normal = {style = "Regular", family = "Fantasque Sans Mono"}
 # bold = {style = "Bold"}
 
